--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,158 @@
   margin: 0;
   padding: 0;
 }
+
+.home {
+  /* margin-top: '30px'; */
+  border: 1px solid rgb(245, 238, 238);
+  /* margin-top: 40px; */
+  background-color: rgb(252, 252, 255);
+  height: 650px;
+  width: 1400px;
+}
+
+.topBar {
+  width: 800px;
+  height: 90px;
+  border-bottom: solid 1px rgb(245, 238, 238);
+  margin-top: 40px;
+}
+
+.navLink {
+  float: right;
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.sideBar {
+  /* width: '150px'; */
+  /* width: '20%'; */
+  /* border-right: solid 1px rgb(245, 238, 238); */
+  height: 600px;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+
+h1,
+h2,
+h3 {
+  color: rbg(85, 80, 100);
+}
+
+.gigNav {
+  overflow: hidden;
+  background-color: rgb(252, 252, 255);
+  margin-bottom: 30px;
+}
+
+.gigButtonA {
+  float: left;
+  border: rgb(252, 252, 255);
+  background-color: rgb(252, 252, 255);
+  color: rgb(210, 208, 215);
+}
+
+.gigButtonB {
+  margin-left: 200px;
+  border: rgb(252, 252, 255);
+  background-color: rgb(252, 252, 255);
+  color: rgb(210, 208, 215);
+}
+
+.gigButtonC {
+  float: right;
+  margin-right: 120px;
+  border: rgb(252, 252, 255);
+  background-color: rgb(252, 252, 255);
+  color: rgb(210, 208, 215);
+}
+
+.badge {
+  background-color: #fbf3e6;
+  color: yellow;
+  width: 50px;
+  margin-left: 10px;
+}
+
+.midButton {
+  width: 100px;
+  margin-right: 30px;
+  border: 1px solid gainsboro;
+  background-color: rgb(252, 252, 255);
+  color: rgb(210, 208, 215);
+  border-radius: 8%;
+  box-shadow: gainsboro;
+  font-size: 12px;
+}
+
+.midButtonC {
+  width: 150px;
+  /* padding-right: 10px;
+  padding-left: 10px; */
+  margin-right: 30px;
+  border: 1px solid gainsboro;
+  background-color: rgb(252, 252, 255);
+  color: rgb(210, 208, 215);
+  border-radius: 8%;
+  box-shadow: gainsboro;
+  font-size: 12px;
+}
+
+.firstbox {
+  height: 150px;
+  width: 200px;
+  background-color: white;
+  box-shadow: ivory;
+  border-radius: 5%;
+  padding: 45px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.secondbox {
+  height: 400px;
+  width: 500px;
+  background-color: white;
+  box-shadow: ivory;
+  border-radius: 5%;
+  padding: 45px;
+  margin-top: 20px;
+}
+
+.secondboxB {
+  height: 200px;
+  width: 500px;
+  background-color: white;
+  box-shadow: ivory;
+  border-radius: 5%;
+  padding: 45px;
+  margin-top: 20px;
+}
+
+input {
+  width: 150px;
+}
+
+.tableH {
+  background-color: white;
+  border: '0.5px solid white';
+  margin-top: '10px';
+}
+
+.deleteB {
+  background-color: rgb(252, 244, 230);
+  width: 90px;
+  border: white;
+  color: rgb(251, 207, 107);
+  border-radius: 10%;
+}
+
+/* @media screen and (min-width: 480px) {
+  .secondbox {
+    width: 25%;
+  }
+} */
+
+.check {
+  margin-right: -110px;
+}
